--- a/Terapia-de-pareja-near-me.html
+++ b/Terapia-de-pareja-near-me.html
@@ -16,7 +16,6 @@ Docente ., ​Cuéntanos tu inquietud.">
     <meta property="og:description" content="Te comparto herramientas gratuitas para superar asertivamente conflictos de pareja. Cuentanos tu caso y con gusto te atenderemos.">
     <meta property="og:image" content="https://karilyntalavera.com/images/OG_PAREJAS.png">
     <meta property="og:url" content="https://karilyntalavera.com/">
-    <link rel="canonical" href="https://karilyntalavera.com/">
     <link id="u-theme-google-font" rel="stylesheet" href="fonts.css">
     <link id="u-page-google-font" rel="stylesheet" href="Terapia-de-pareja-near-me-fonts.css">
     
@@ -39,8 +38,7 @@ Docente ., ​Cuéntanos tu inquietud.">
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "SexologaK",
-		"url": "https://karilyntalavera.com/"
+		"name": "SexologaK"
 }</script>
     <meta name="theme-color" content="#9b74ec">
     <meta property="og:type" content="website">
