--- a/Terapia-de-pareja-near-me.html
+++ b/Terapia-de-pareja-near-me.html
@@ -16,6 +16,7 @@ Docente ., ​Cuéntanos tu inquietud.">
     <meta property="og:description" content="Te comparto herramientas gratuitas para superar asertivamente conflictos de pareja. Cuentanos tu caso y con gusto te atenderemos.">
     <meta property="og:image" content="https://karilyntalavera.com/images/OG_PAREJAS.png">
     <meta property="og:url" content="https://karilyntalavera.com/">
+    
     <link id="u-theme-google-font" rel="stylesheet" href="fonts.css">
     <link id="u-page-google-font" rel="stylesheet" href="Terapia-de-pareja-near-me-fonts.css">
     
@@ -318,7 +319,7 @@ El próximo video puede ayudarte a superar este obstáculo y mejorar tu relació
       </div>
     </section>
     <section class="u-align-center u-clearfix u-container-align-center u-custom-color-4 u-section-12" id="sec-d09c" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-align-center u-text u-text-1">&nbsp;​Terapia de Pareja near me<br>¿Para qué sirve esto de la Terapia de parejas?<br>Te lo explico a
 continuación.
         </h2>
@@ -328,7 +329,7 @@ continuación.
       <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <p class="u-align-justify u-text u-text-default-xl u-text-1"> La terapia individual
 y terapia de pareja, ayuda a abordar temas como:&nbsp;</p>
-        <ol class="u-align-justify u-spacing-8 u-text u-text-default u-text-2">
+        <ol class="u-align-justify u-spacing-8 u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">
           <li style="padding-left: 0px;">
             <span style="font-weight: 700;">Abordar problemas sexuales:</span> la terapia de pareja puede ayudar a identificar y r​esolver problemas relacionados con la intimidad y la sexualidad.
           </li>
@@ -342,7 +343,8 @@ y terapia de pareja, ayuda a abordar temas como:&nbsp;</p>
             <span style="font-weight: 700;">Fomentar la fijación de límites claros:</span> la terapia de pareja puede ayudar a establecer límites claros y saludables en la relación, lo que puede mejorar la satisfacción en cada aspecto de la vida donde se implementen, incluyendo la vida sexual y de pareja.
           </li>
         </ol>
-        <a href="https://wa.link/yxlj9s" class="infinite u-align-center u-btn u-btn-round u-button-style u-custom-color-5 u-radius-45 u-btn-1" target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0">!Haz tu consulta ahora!</a>
+        <a href="https://wa.link/yxlj9s" class="infinite u-align-center u-btn u-btn-round u-button-style u-custom-color-5 u-radius-45 u-btn-1" target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0">!Haz tu consulta&nbsp;<br>ahora!
+        </a>
       </div>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-14" id="carousel_5aaa">
@@ -352,7 +354,7 @@ importancia de reconocer y enfrentar los problemas en la relación de
 pareja.&nbsp; &nbsp;<br><!--[if !supportLineBreakNewLine]-->
             <br><!--[endif]--></b>
         </h3>
-        <p class="u-align-justify u-text u-text-default u-text-2"> Cuando se trata de resolver problemas en la relación,
+        <p class="u-align-justify u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2"> Cuando se trata de resolver problemas en la relación,
 reconocer que hay un problema es fundamental.&nbsp;Es importante entender que
 evadir el problema no es ser un adulto responsable, sino que enfrentar los
 conflictos y buscar ayuda es lo que nos hace crecer y madurar.&nbsp;Al aceptar
@@ -372,7 +374,8 @@ puede ayudar a resolver el problema antes de que sea demasiado tarde.&nbsp;<br>
           <br> Si sientes que tu relación necesita un impulso en la dirección correcta, ¡estoy
 aquí para ayudarte!
         </p>
-        <a href="https://wa.link/yxlj9s" class="infinite u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-45 u-btn-1" target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0"> ¡Quiero ese impulso Ahora! </a>
+        <a href="https://wa.link/yxlj9s" class="infinite u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-45 u-btn-1" target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0"> ¡Quiero ese impulso<br>Ahora! 
+        </a>
       </div>
     </section>
     <section class="u-clearfix u-container-align-center u-custom-color-4 u-section-15" id="carousel_e3d6">
