--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ como estar atrapado en una montaña rusa emocional sin un botón de parada. ¿Ve
       </div>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-3" id="carousel_2ec0">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h2 class="u-align-center u-text u-text-custom-color-20 u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500"> ¿Te has
 preguntado si esa estrategia de ignorar los problemas realmente te está
 ayudando o solo está agregando más peso a tus hombros? </h2>
@@ -233,13 +233,13 @@ ti misma y de tus relaciones en tan solo una semana.
       </div>
     </section>
     <section class="u-clearfix u-section-4" id="sec-77a5">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
-                <div class="u-container-layout u-valign-top u-container-layout-1">
-                  <h2 class="u-align-center u-text u-text-custom-color-10 u-text-default u-text-1"> ¿Sabes que puedes&nbsp;<br>mejorar tu relación?&nbsp;<br>¿Quieres
+                <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
+                  <h2 class="u-align-center u-text u-text-custom-color-10 u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1"> ¿Sabes que puedes&nbsp;<br>mejorar tu relación?&nbsp;<br>¿Quieres
 hacerlo?&nbsp;<br>
                   </h2>
                   <p class="u-align-justify u-text u-text-default u-text-2"> Si estás dispuesto a invertir dos minutos al día en mejorar
@@ -257,7 +257,7 @@ corres el riesgo de no querer perder la oportunidad de trabajar con nosotros.
               </div>
               <div class="u-align-center u-black u-container-style u-layout-cell u-shape-rectangle u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-bottom u-container-layout-2">
-                  <p class="u-align-center u-text u-text-default u-text-3">Para recibir valiosas herramientas y consejos que transformarán tu relación de pareja, simplemente deja tu correo electrónico aquí abajo. Descubre por ti mismo cómo una terapia de pareja enfocada y una comunicación efectiva pueden fortalecer tu vínculo emocional y mejorar tu vida en pareja.&nbsp;</p>
+                  <p class="u-align-center u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-3">Para recibir valiosas herramientas y consejos que transformarán tu relación de pareja, simplemente deja tu correo electrónico aquí abajo. Descubre por ti mismo cómo una terapia de pareja enfocada y una comunicación efectiva pueden fortalecer tu vínculo emocional y mejorar tu vida en pareja.&nbsp;</p>
                   <p class="u-align-center u-text u-text-default u-text-4"><b>«8 ideas efectivas para identificar que está
 pasando en mi relación individual y de pareja»&nbsp;</b>
                   </p>
@@ -291,7 +291,7 @@ pasando en mi relación individual y de pareja»&nbsp;</b>
     </section>
     <section class="u-clearfix u-section-5" id="sec-792a">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <blockquote class="u-align-center u-text u-text-custom-color-20 u-text-1"> Hoy estás donde tus pensamientos te han traído;&nbsp;mañana estarás donde tus pensamientos te lleven.<br>James Allen.
+        <blockquote class="u-align-center u-text u-text-custom-color-20 u-text-1">Hoy estás donde tus pensamientos te han traído;&nbsp;mañana estarás donde tus pensamientos te lleven.<br>James Allen.
         </blockquote>
         <p class="u-align-center u-text u-text-2"> Pregúntate:&nbsp;<br>¿Sientes que
 tus pensamientos están constantemente llenos de preocupaciones sobre tu
@@ -319,11 +319,11 @@ cita hoy mismo y comencemos juntas el camino hacia una relación más saludable.
           </div>
           <iframe src="https://calendly.com/karilyntalavera/terapia-de-pareja-60min?embed_domain=app.desktop.nicepage.com&amp;embed_type=Inline&amp;hide_event_type_details=1&amp;hide_gdpr_banner=1" width="100%" height="100%" frameborder="0" title="Select a Date &amp; Time - Calendly"></iframe>
         </div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async=""></script><!-- Final del widget integrado de Calendly -->
+        <div type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async="async" class="u-secured-comment-wrapped u-secured-script" style="display: none;"><!--  --></div><!-- Final del widget integrado de Calendly -->
         <p></p>
       </div>
     </section>
-    <section class="u-clearfix u-section-7" id="carousel_156f">
+    <section class="u-clearfix u-valign-middle-xs u-section-7" id="carousel_156f">
       <div class="u-custom-color-4 u-expanded-width u-shape u-shape-rectangle u-shape-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250"></div>
       <div class="custom-expanded data-layout-selected u-clearfix u-gutter-0 u-layout-wrap u-layout-wrap-1">
         <div class="u-layout" style="">
