Mejorar FCP_pintaje.
Se redujo tiempos de animaciones para FCP.

--- a/Terapeuta-cerca-de-mi.html
+++ b/Terapeuta-cerca-de-mi.html
@@ -166,19 +166,19 @@
       </div></header>
     <section class="u-align-center u-clearfix u-custom-color-15 u-section-1" id="carousel_0bab">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-shape u-shape-svg u-text-palette-2-light-2 u-shape-1" data-animation-name="flipIn" data-animation-duration="1500" data-animation-direction="X" data-animation-delay="500">
+        <div class="u-shape u-shape-svg u-text-palette-2-light-2 u-shape-1">
           <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 160" style=""><use xlink:href="#svg-e858"></use></svg>
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 160 160" x="0px" y="0px" id="svg-e858" style="enable-background:new 0 0 160 160;"><path d="M80,30c27.6,0,50,22.4,50,50s-22.4,50-50,50s-50-22.4-50-50S52.4,30,80,30 M80,0C35.8,0,0,35.8,0,80s35.8,80,80,80
 	s80-35.8,80-80S124.2,0,80,0L80,0z"></path></svg>
         </div>
-        <div class="u-align-center-xs u-image u-image-circle u-image-1" data-image-width="1380" data-image-height="1104" data-animation-name="customAnimationIn" data-animation-duration="1500"></div>
-        <div class="u-shape u-shape-svg u-text-palette-1-light-1 u-shape-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="1500">
+        <div class="u-align-center-xs u-image u-image-circle u-image-1" data-image-width="1380" data-image-height="1104"></div>
+        <div class="u-shape u-shape-svg u-text-palette-1-light-1 u-shape-2">
           <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 160" style=""><use xlink:href="#svg-a0bf"></use></svg>
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 160 160" x="0px" y="0px" id="svg-a0bf" style="enable-background:new 0 0 160 160;"><path d="M80,30c27.6,0,50,22.4,50,50s-22.4,50-50,50s-50-22.4-50-50S52.4,30,80,30 M80,0C35.8,0,0,35.8,0,80s35.8,80,80,80
 	s80-35.8,80-80S124.2,0,80,0L80,0z"></path></svg>
         </div>
-        <div class="u-shape u-shape-circle u-white u-shape-3" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="750"></div>
-        <div class="u-align-center u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
+        <div class="u-shape u-shape-circle u-white u-shape-3"></div>
+        <div class="u-align-center u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1">
           <div class="u-container-layout u-valign-bottom-xs u-container-layout-1">
             <h1 class="u-align-center u-text u-text-1"> ¿PREFIERES IGNORAR LOS PROBLEMAS CON TU PAREJA EN LUGAR DE RESOLVERLOS DE MANERA ESTRATEGICA?<br>
             </h1>
@@ -190,15 +190,15 @@ que estás pasando. </p>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-2" id="carousel_fd1b">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
-        <h2 class="u-align-center u-text u-text-custom-color-9 u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500"> ¿Alguna vez has sentido que estás en un ciclo interminable de discusiones en tu relación de par​eja que nunca llevan a ninguna parte?&nbsp;</h2>
-        <p class="u-align-center u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500"> Es
+        <h2 class="u-align-center u-text u-text-custom-color-9 u-text-1"> ¿Alguna vez has sentido que estás en un ciclo interminable de discusiones en tu relación de par​eja que nunca llevan a ninguna parte?&nbsp;</h2>
+        <p class="u-align-center u-text u-text-2"> Es
 como estar atrapado en una montaña rusa emocional sin un botón de parada. ¿Verdad?.<br>
         </p>
       </div>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-3" id="carousel_2ec0">
       <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-        <h2 class="u-align-center u-text u-text-custom-color-20 u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500"> ¿Te has
+        <h2 class="u-align-center u-text u-text-custom-color-20 u-text-1"> ¿Te has
 preguntado si esa estrategia de ignorar los problemas realmente te está
 ayudando o solo está agregando más peso a tus hombros? </h2>
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
@@ -239,7 +239,7 @@ ti misma y de tus relaciones en tan solo una semana.
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
-                  <h2 class="u-align-center u-text u-text-custom-color-10 u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1"> ¿Sabes que puedes&nbsp;<br>mejorar tu relación?&nbsp;<br>¿Quieres
+                  <h2 class="u-align-center u-text u-text-custom-color-10 u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"> ¿Sabes que puedes&nbsp;<br>mejorar tu relación?&nbsp;<br>¿Quieres
 hacerlo?&nbsp;<br>
                   </h2>
                   <p class="u-align-justify u-text u-text-default u-text-2"> Si estás dispuesto a invertir dos minutos al día en mejorar
@@ -291,7 +291,7 @@ pasando en mi relación individual y de pareja»&nbsp;</b>
     </section>
     <section class="u-clearfix u-section-5" id="sec-792a">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <blockquote class="u-align-center u-text u-text-custom-color-20 u-text-1">Hoy estás donde tus pensamientos te han traído;&nbsp;mañana estarás donde tus pensamientos te lleven.<br>James Allen.
+        <blockquote class="u-align-center u-text u-text-custom-color-20 u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500">Hoy estás donde tus pensamientos te han traído;&nbsp;mañana estarás donde tus pensamientos te hayan llevado.<br>James Allen.
         </blockquote>
         <p class="u-align-center u-text u-text-2"> Pregúntate:&nbsp;<br>¿Sientes que
 tus pensamientos están constantemente llenos de preocupaciones sobre tu
@@ -308,8 +308,9 @@ respondiste sí a alguna de estas preguntas, es hora de tomar acción.&nbsp;
     </section>
     <section class="u-clearfix u-custom-color-19 u-section-6" id="sec-a1ce">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-custom-color-20 u-text-default u-text-1"> Agenda una
-cita hoy mismo y comencemos juntas el camino hacia una relación más saludable. </h2>
+        <h2 class="infinite u-align-center u-text u-text-custom-color-20 u-text-1" data-animation-name="jello" data-animation-duration="2500" data-animation-direction="" data-animation-delay="0"> ¡Agenda una
+cita hoy mismo!&nbsp;<br>Tenemos un espacio reservado para ti.
+        </h2>
         <p class="u-align-center u-text u-text-2"><!-- Principio del widget integrado de Calendly --></p>
         <div class="calendly-inline-widget" style="position: relative;min-width:320px;height:700px;">
           <div class="calendly-spinner">
@@ -369,7 +370,7 @@ nuestra vida,&nbsp;si… exactamente a esa me refiero, a la relación contigo.&n
                   </div>
                 </div>
                 <div class="u-container-style u-hidden-xs u-layout-cell u-size-40 u-layout-cell-4" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">
-                  <div class="u-container-layout u-container-layout-4">
+                  <div class="u-container-layout u-valign-middle u-container-layout-4">
                     <div class="custom-expanded u-align-center u-image u-image-circle u-image-5" data-image-width="1024" data-image-height="1024"></div>
                   </div>
                 </div>
@@ -381,7 +382,7 @@ nuestra vida,&nbsp;si… exactamente a esa me refiero, a la relación contigo.&n
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-8" id="sec-93d2">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-custom-color-10 u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500"> ¿Que encontraras al abrir la puerta de la terapia individual y de pareja?<br>
+        <h2 class="u-align-center u-text u-text-custom-color-10 u-text-1" data-animation-name="customAnimationIn" data-animation-duration="750"> ¿Que encontraras al abrir la puerta de la terapia individual y de pareja?<br>
         </h2>
       </div>
     </section>
@@ -543,9 +544,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     </section>
     <section class="u-align-center u-clearfix u-white u-section-15" id="carousel_505a">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">Preguntas frecuentes de la<br>Terapia Online Individual y de pareja.
+        <h2 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="0">Preguntas frecuentes de la<br>Terapia Online Individual y de pareja.
         </h2>
-        <div class="u-accordion u-collapsed-by-default u-faq u-spacing-10 u-accordion-1">
+        <div class="u-accordion u-align-center u-collapsed-by-default u-faq u-spacing-10 u-accordion-1">
           <div class="u-accordion-item">
             <a class="u-accordion-link u-active-palette-1-light-2 u-button-style u-grey-5 u-hover-palette-1-light-2 u-text-active-black u-text-hover-palette-1-dark-1 u-text-palette-1-dark-1 u-accordion-link-1" id="link-accordion-f600" aria-controls="accordion-f600" aria-selected="false">
               <span class="u-accordion-link-text">¿Cómo sé si la terapia de pareja es adecuada para nosotros? </span><span class="u-accordion-link-icon u-icon u-text-active-palette-1-dark-2 u-text-hover-black u-text-palette-1-base u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 426.66667 426.66667" style=""><use xlink:href="#svg-b6d8"></use></svg><svg class="u-svg-content" viewBox="0 0 426.66667 426.66667" id="svg-b6d8"><path d="m405.332031 192h-170.664062v-170.667969c0-11.773437-9.558594-21.332031-21.335938-21.332031-11.773437 0-21.332031 9.558594-21.332031 21.332031v170.667969h-170.667969c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h170.667969v170.664062c0 11.777344 9.558594 21.335938 21.332031 21.335938 11.777344 0 21.335938-9.558594 21.335938-21.335938v-170.664062h170.664062c11.777344 0 21.335938-9.558594 21.335938-21.335938 0-11.773437-9.558594-21.332031-21.335938-21.332031zm0 0"></path></svg></span>
@@ -612,9 +613,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     <section class="u-clearfix u-custom-color-4 u-section-16" id="carousel_f642">
       <div class="u-shape u-shape-circle u-white u-shape-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500"></div>
       <div class="u-expanded-width u-shape u-shape-rectangle u-white u-shape-2"></div>
-      <div class="u-image u-image-circle u-image-1" data-image-width="608" data-image-height="574" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250"></div>
-      <div class="u-image u-image-circle u-image-2" data-image-width="2075" data-image-height="1381" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500"></div>
-      <div class="u-border-20 u-border-white u-image u-image-circle u-preserve-proportions u-image-3" data-image-width="1184" data-image-height="864" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="500"></div>
+      <div class="u-image u-image-circle u-image-1" data-image-width="608" data-image-height="574" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="0"></div>
+      <div class="u-image u-image-circle u-image-2" data-image-width="2075" data-image-height="1381" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-delay="1000"></div>
+      <div class="u-border-20 u-border-white u-image u-image-circle u-preserve-proportions u-image-3" data-image-width="1184" data-image-height="864" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="750"></div>
       <div class="u-preserve-proportions u-shape u-shape-svg u-text-palette-2-light-2 u-shape-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
         <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 160" style=""><use xlink:href="#svg-410b"></use></svg>
         <svg class="u-svg-content" viewBox="0 0 160 160" x="0px" y="0px" id="svg-410b" style="enable-background:new 0 0 160 160;"><path d="M80,30c27.6,0,50,22.4,50,50s-22.4,50-50,50s-50-22.4-50-50S52.4,30,80,30 M80,0C35.8,0,0,35.8,0,80s35.8,80,80,80
@@ -626,7 +627,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-container-align-center u-container-style u-layout-cell u-size-30-lg u-size-30-xl u-size-60-md u-size-60-sm u-size-60-xs u-layout-cell-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
+              <div class="u-container-align-center u-container-style u-layout-cell u-size-30-lg u-size-30-xl u-size-60-md u-size-60-sm u-size-60-xs u-layout-cell-1" data-animation-name="customAnimationIn" data-animation-duration="250" data-animation-delay="0">
                 <div class="u-container-layout u-container-layout-1">
                   <h2 class="u-align-center u-text u-text-1"> ¿Qué opinan nuestros pacientes?</h2>
                   <img class="u-align-center u-image u-image-default u-image-1" alt="" data-image-width="1380" data-image-height="920" src="images/smiling-rehab-patients-looking-e.jpg">
@@ -689,20 +690,20 @@ conexión más profunda y significativa en nuestra relación.</p>
       </div>
     </section>
     <section class="u-clearfix u-container-align-center u-section-18" id="carousel_0adf">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-size-30">
                 <div class="u-layout-col">
-                  <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-size-60 u-image-1" data-image-width="626" data-image-height="626" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
+                  <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-size-60 u-image-1" data-image-width="626" data-image-height="626" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="250">
                     <div class="u-container-layout"></div>
                   </div>
                 </div>
               </div>
               <div class="u-size-30">
                 <div class="u-layout-row">
-                  <div class="u-container-style u-layout-cell u-left-cell u-size-60 u-white u-layout-cell-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
+                  <div class="u-container-style u-layout-cell u-left-cell u-size-60 u-white u-layout-cell-2" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="250">
                     <div class="u-container-layout u-valign-top u-container-layout-2">
                       <h2 class="u-align-center u-text u-text-1">¡​Descubre lo que tu caja fuerte revela!<br>Reserva tu cita ahora.&nbsp;
                       </h2>
