--- a/Terapia-de-pareja-near-me.html
+++ b/Terapia-de-pareja-near-me.html
@@ -85,7 +85,7 @@ Docente ., ​Cuéntanos tu inquietud.">
           </div>
         </nav>
       </div></header>
-    <section class="u-align-left u-clearfix u-image u-shading u-section-1" id="carousel_b404" data-image-width="1620" data-image-height="1080">
+    <section class="u-align-left u-clearfix u-container-align-left u-image u-shading u-section-1" id="carousel_b404" data-image-width="1620" data-image-height="1080">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
@@ -94,15 +94,14 @@ Docente ., ​Cuéntanos tu inquietud.">
                 <div class="u-layout-row">
                   <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-1">
                     <div class="u-container-layout u-valign-top u-container-layout-1">
-                      <h1 class="u-align-center u-text u-text-default u-text-1"> Terapia Online&nbsp;<br>con la Sexóloga Karilyn Talavera. 
-                      </h1>
+                      <h1 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1"> Sexóloga cerca de mí: Especialista en terapia sexual, individual y de pareja.&nbsp;</h1>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="u-size-20">
                 <div class="u-layout-row">
-                  <div class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-2">
+                  <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-2">
                     <div class="u-container-layout u-container-layout-2">
                       <h2 class="u-align-center u-text u-text-white u-text-2"> Especialista en Asesoría Clínica de parejas con una experiencia de más de 10 años ayudando a las parejas a establecer puntos comunes para potenciar la relación a través del entendimiento mutuo y la fijación de límites claros no negociables.&nbsp;<br>
                       </h2>
@@ -137,7 +136,7 @@ Docente ., ​Cuéntanos tu inquietud.">
         </h2>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-custom-color-4 u-section-3" id="carousel_ff80">
+    <section class="u-align-center u-clearfix u-container-align-center u-custom-color-4 u-section-3" id="carousel_ff80">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-border-2 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
         <div class="u-align-center u-uploaded-video u-video u-video-contain u-video-1">
@@ -150,7 +149,7 @@ Docente ., ​Cuéntanos tu inquietud.">
         </div>
       </div>
     </section>
-    <section class="u-align-left u-clearfix u-custom-color-4 u-section-4" id="sec-dd8c">
+    <section class="u-align-left u-clearfix u-container-align-left u-custom-color-4 u-section-4" id="sec-dd8c">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-align-center u-text u-text-1"> ¿Buscando Sexóloga Online más cerca de ti?&nbsp;<span class="u-text-custom-color-4" style="font-size: 1rem;">
             <br>
@@ -268,54 +267,54 @@ El próximo video puede ayudarte a superar este obstáculo y mejorar tu relació
         </h2>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
-            <div class="u-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-1" src="" data-image-width="976" data-image-height="477" data-animation-name="customAnimationIn" data-animation-duration="1500">
+            <div class="u-align-left u-container-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-1" src="" data-image-width="976" data-image-height="477" data-animation-name="customAnimationIn" data-animation-duration="1500">
               <div class="u-container-layout u-similar-container u-container-layout-1">
-                <div class="u-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+                <div class="u-align-center u-container-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
                   <div class="u-container-layout u-container-layout-2">
                     <h5 class="u-align-center u-text u-text-white u-text-2">Acuerdos y negociacion en pareja</h5>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="u-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-2" src="" data-image-width="880" data-image-height="495" data-animation-name="customAnimationIn" data-animation-duration="1500">
+            <div class="u-align-left u-container-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-2" src="" data-image-width="880" data-image-height="495" data-animation-name="customAnimationIn" data-animation-duration="1500">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <div class="u-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+                <div class="u-align-center u-container-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
                   <div class="u-container-layout u-container-layout-4">
                     <h5 class="u-align-center u-text u-text-white u-text-3"> Procesos de Separación&nbsp; </h5>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="u-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-3" src="" data-image-width="768" data-image-height="512" data-animation-name="customAnimationIn" data-animation-duration="1500">
+            <div class="u-align-left u-container-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-3" src="" data-image-width="768" data-image-height="512" data-animation-name="customAnimationIn" data-animation-duration="1500">
               <div class="u-container-layout u-similar-container u-container-layout-5">
-                <div class="u-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-3" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+                <div class="u-align-center u-container-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-3" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
                   <div class="u-container-layout u-container-layout-6">
                     <h5 class="u-align-center u-text u-text-white u-text-4"> Infidelidad </h5>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="u-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-4" src="" data-image-width="975" data-image-height="649" data-animation-name="customAnimationIn" data-animation-duration="1500">
+            <div class="u-align-left u-container-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-4" src="" data-image-width="975" data-image-height="649" data-animation-name="customAnimationIn" data-animation-duration="1500">
               <div class="u-container-layout u-similar-container u-container-layout-7">
-                <div class="u-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-4" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+                <div class="u-align-center u-container-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-4" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
                   <div class="u-container-layout u-container-layout-8">
                     <h5 class="u-align-center u-text u-text-white u-text-5">Falta de deseo&nbsp;&nbsp;</h5>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="u-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-5" src="" data-image-width="545" data-image-height="303" data-animation-name="customAnimationIn" data-animation-duration="1500">
+            <div class="u-align-left u-container-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-5" src="" data-image-width="545" data-image-height="303" data-animation-name="customAnimationIn" data-animation-duration="1500">
               <div class="u-container-layout u-similar-container u-container-layout-9">
-                <div class="u-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-5" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+                <div class="u-align-center u-container-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-5" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
                   <div class="u-container-layout u-container-layout-10">
                     <h5 class="u-align-center u-text u-text-white u-text-6"> Límites personales y límites en pareja </h5>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="u-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-6" src="" data-image-width="1200" data-image-height="800" data-animation-name="customAnimationIn" data-animation-duration="1500">
+            <div class="u-align-left u-container-align-left u-container-style u-image u-list-item u-repeater-item u-shading u-image-6" src="" data-image-width="1200" data-image-height="800" data-animation-name="customAnimationIn" data-animation-duration="1500">
               <div class="u-container-layout u-similar-container u-container-layout-11">
-                <div class="u-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-6" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+                <div class="u-align-center u-container-align-center u-container-style u-custom-color-5 u-expanded-width u-group u-opacity u-opacity-90 u-group-6" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
                   <div class="u-container-layout u-container-layout-12">
                     <h5 class="u-align-center u-text u-text-white u-text-7">Asertividad</h5>
                   </div>
@@ -399,7 +398,7 @@ aquí para ayudarte!
                   <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-1"> Cuéntanos tu inquietud.</h2>
                 </div>
               </div>
-              <div class="u-align-center u-container-style u-custom-color-5 u-layout-cell u-size-20 u-layout-cell-3" data-animation-name="customAnimationIn" data-animation-duration="2000">
+              <div class="u-align-center u-container-align-center u-container-style u-custom-color-5 u-layout-cell u-size-20 u-layout-cell-3" data-animation-name="customAnimationIn" data-animation-duration="2000">
                 <div class="u-container-layout u-container-layout-3">
                   <span class="infinite u-align-center u-file-icon u-icon u-icon-1" data-href="https://wa.link/yxlj9s" data-target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0">
                     <img src="images/1384055.png" alt="">
@@ -417,7 +416,7 @@ aquí para ayudarte!
     <footer class="u-clearfix u-footer u-grey-80" id="sec-dab2"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-center u-container-align-center u-container-style u-group u-group-1">
           <div class="u-container-layout u-valign-middle u-container-layout-1">
-            <p class="u-small-text u-text u-text-variant u-text-1"> Copyright © 2024 - karilyntalavera.com<br>Todos los derechos reservados.
+            <p class="u-small-text u-text u-text-variant u-text-1"> Copyright © 2025 - karilyntalavera.com<br>Todos los derechos reservados.
             </p>
           </div>
         </div>
