--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       </div>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-3" id="carousel_8d8e" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
-      <div class="u-clearfix u-sheet u-valign-top-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
@@ -298,7 +298,7 @@
               </div>
               <div class="u-container-style u-layout-cell u-radius u-size-26 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-4">
-                  <img class="custom-expanded u-align-center u-image u-image-1" src="images/_Ennuestraterapiadeparejalaclaveestenaprenderaescucharsemutuamente..webp?rand=14aa" data-image-width="1440" data-image-height="959">
+                  <img class="custom-expanded u-align-center u-image u-image-1" src="images/_Ennuestraterapiadeparejalaclaveestenaprenderaescucharsemutuamente..webp?rand=b8cc" data-image-width="1440" data-image-height="959">
                 </div>
               </div>
             </div>
@@ -495,7 +495,7 @@
         </p>
         <div class="u-align-center u-uploaded-video u-video u-video-contain u-video-1">
           <div class="embed-responsive">
-            <video class="embed-responsive-item">
+            <video class="embed-responsive-item" muted="1" controls="">
               <source src="files/Qu-hacer-cuando-tu-pareja-se-niega-a-ir-a-terapia.mp4" type="video/mp4">
               <p>Your browser does not support HTML5 video.</p>
             </video>
